--- a/projects/topomojo-mks/src/index.html
+++ b/projects/topomojo-mks/src/index.html
@@ -1,8 +1,9 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <!-- ##COMMIT## -->
   <meta charset="utf-8">
-  <title>TopomojoMks</title>
+  <title>console:</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
