--- a/projects/topomojo-mks/src/index.html
+++ b/projects/topomojo-mks/src/index.html
@@ -1,14 +1,17 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <!-- ##COMMIT## -->
   <meta charset="utf-8">
   <title>console:</title>
-  <base href="/">
+  <base href="/mks/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
+
 <body>
   <app-root></app-root>
 </body>
+
 </html>
