--- a/projects/topomojo-mks/src/index.html
+++ b/projects/topomojo-mks/src/index.html
@@ -5,7 +5,7 @@
   <!-- ##COMMIT## -->
   <meta charset="utf-8">
   <title>console:</title>
-  <base href="/">
+  <base href="/mks/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
